<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.RegisterFragment">

    <include layout="@layout/app_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />


            <EditText
                android:id="@+id/register_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname" />

            <RadioGroup
                android:id="@+id/register_gender_group"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:visibility="gone"
                android:id="@+id/register_gender_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/choose_gender" />

            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:drawableEnd="@drawable/ic_date"
                android:id="@+id/register_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:editable="false"
                android:focusable="false"
                android:hint="@string/birthday"
                android:inputType="text"
                android:maxLines="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:focusable="false"
                    android:text="+996" />


                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/register_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789"
                    android:ellipsize="end"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:maxLength="12"
                    android:tag="PhoneNumber"
                    android:scrollHorizontally="true"
                    app:met_mask="### ## ## ##" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/style_button_background"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>