<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.order.OrderFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_name_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_surname_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_phone_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/order_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:scrollHorizontally="true"
                    android:digits="0123456789"
                    android:maxLines="1"
                    app:met_mask="+(###)##-##-##"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_height="wrap_content"
                android:hint="@string/payment_types"
                android:id="@+id/payment_types">
                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/payment_type_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_pay_delivery_out"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/order_delivery_type">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/order_delivery_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="false"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_streets_out"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:hint="@string/order_streets">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:singleLine="true"
                    android:id="@+id/order_streets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_building_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/order_building">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_apartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/order_apartments">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_apartments_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/order_floor_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/order_floor"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/order_comment_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/order_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="clip_vertical"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:minLines="3" />

            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/order_deliveryAt_out"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="0.4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_date"
                        android:layout_width="match_parent"
                        android:focusableInTouchMode="false"
                        android:hint="@string/data_time"
                        android:layout_height="wrap_content"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/order_time_out"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/order_time"
                        android:layout_width="match_parent"
                        android:focusableInTouchMode="false"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/order_time"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/order_warning_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/order_warning_checkbox"
                    android:layout_marginTop="8dp"
                    android:text="@string/order_warning_tb"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/order_warning_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/order_warning_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/order_warning_tv" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_margin="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_validate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_button_background"
                android:gravity="center"
                android:text="@string/order_check"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>